update ui to have an extraction table + add endpoint to manage extraction list for a given user
