# nio-server/conf/swagger/swagger.json
@@ -1689,6 +1689,79 @@
           }
         }
       }
+    },
+    "/api/{tenant}/organisations/{orgKey}/users/{userId}/_extracted": {
+      "get": {
+        "tags": [
+          "extraction"
+        ],
+        "summary": "Récupérer la liste des extractions réalisées pour un utilisateur donné.",
+        "description": "Récupération de la liste des extractions réalisées pour un utilisateur donné.",
+        "parameters": [
+          {
+            "name": "$CLIENT_ID",
+            "in": "header",
+            "description": "Otoroshi client id",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "$CLIENT_SECRET",
+            "in": "header",
+            "description": "Otoroshi client secret",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "tenant",
+            "in": "path",
+            "description": "Le nom du tenant",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "orgKey",
+            "in": "path",
+            "description": "La clé de l'organisation",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "L'identifiant utilisateur",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Le numero de la page (0 par défaut)",
+            "required": false,
+            "type": "string",
+            "default": 0
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "description": "Le nombre d'élements par page (10 par défaut)",
+            "required": false,
+            "type": "string",
+            "default": 10
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "La liste paginée des extractions.",
+            "schema": {
+              "$ref": "#/definitions/PagedUserExtractTask"
+            }
+          },
+          "404": {
+            "description": "Le tenant ou l'organisation est inconnu."
+          }
+        }
+      }
     }
   },
   "definitions": {
